[package]
name = "onnx-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.58"
prost = { version = "0.12.3", features = [] }

[build-dependencies]
prost-build = "0.12.3"
protoc-prebuilt = { version = "0.3.0", features = [] }